--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,17 +34,19 @@
         </activity>
         <activity
             android:name=".SecondActivity"
-            android:screenOrientation="landscape" />
-        <activity android:name=".DoctorLogin" />
-        <activity android:name=".startingPage" />
-        <activity android:name=".DoctorHome"></activity>
-        <activity android:name=".DoctorSignUp"></activity>
-        <activity android:name=".DocSectionMedince">
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".DoctorLogin" />
+        <activity android:name=".startingPage" />
+        <activity android:name=".DoctorHome"></activity>
+        <activity android:name=".DoctorSignUp"></activity>
+        <activity android:name=".DocSectionMedince">
+
         </activity>
     </application>
 
